# runic-jungle

./: .env  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  start_docker.sh
canisters/agent/: Cargo.toml  agent.did
canisters/agent/src/: chains.rs  guard.rs  indexer.rs  lib.rs  llm.rs  state.rs
canisters/agent/src/chains/: btc.rs
canisters/agent/src/chains/btc/: utils.rs
canisters/agent/src/state/: chats.rs  config.rs  market_maker.rs  prize_pool.rs
canisters/backend/: Cargo.toml  backend.did
canisters/backend/src/: bitcoin.rs  indexer.rs  lib.rs  llm.rs  state.rs  tools.rs  txn_handler.rs  utils.rs
canisters/backend/src/bitcoin/: runestone.rs  transaction.rs  utils.rs
canisters/backend/src/state/: agent.rs  chat_session.rs  commission.rs  config.rs  ledger_entries.rs  queue.rs  utxo_manager.rs
canisters/dex/: Cargo.toml
canisters/factory/: Cargo.toml
canisters/factory/src/: lib.rs  state.rs
canisters/runes_indexer/: Cargo.toml
canisters/runes_indexer/src/: bitcoin_api.rs  index.rs  main.rs  notifier.rs
docker/: ord.Dockerfile  proxy.Dockerfile
src/: App.jsx  config.js  index.css
src/components/: Chatbox.jsx  CreateAgent.jsx  Jackpot.jsx  Market.jsx  Navbar.jsx  Warning.jsx
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js  index.js
src/pages/: Agent.jsx  Home.jsx  Vault.jsx
src/styles/: Agent.css  Chatbox.css  CreateAgent.css  Home.css  Jackpot.css  Market.css  Navbar.css  Vault.css  Warning.css
(+10 files in other folders)
