[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk.workspace = true
candid.workspace = true
ic-stable-structures.workspace = true
ic-llm.workspace = true
icrc-ledger-types.workspace = true
ic-ledger-types.workspace = true

ic-secp256k1.workspace = true
ic-management-canister-types.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true

bitcoin.workspace = true
ordinals.workspace = true

tiny-keccak.workspace = true
getrandom.workspace = true
sha2.workspace = true
ripemd.workspace = true
bs58.workspace = true
hex.workspace = true
num-integer.workspace = true
